# HW-10

./: .gitignore
game/: game.cabal  next.txt  stack.yaml
game/app/: Main.hs
game/src/: Buff.hs  Data.hs  Data.hs-boot  Display.hs  Field.hs  FieldAccess.hs  Functions.hs  Functions.hs-boot  Hunt.hs  LensM.hs  Modifiers.hs  Ordering.hs-boot  Preference.hs  Random.hs  Relation.hs  Stats.hs  StatsLens.hs  storing.hs
game/src/Targeting/: Ordering.hs  Ordering.hs-boot  Preference.hs  Selection.hs
game/src/Unit/: Attack.hs  Common.hs  Type.hs  Type.hs-boot  Variety.hs  Variety.hs-boot
game/src/Viz/: Common.hs  DefineCache.hs  Field.hs  Gather.hs
main/: attack.hs  data.hs  data.hs-boot  field.hs  fieldaccess.hs  hunt.hs  lensm.hs  listener.hs  lol.hs  modifiers.hs  ordering.hs  preference.hs  relation.hs  skill.hs  statslens.hs  unit.hs  units.hs  units.hs-boot  unittypes.hs  unittypes.hs-boot
