name:                game
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/game#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     
    Unit.Attack, Buff, Data, Display, FieldAccess, Field
    Functions, Hunt, LensM, Modifiers, Targeting.Ordering,
    Targeting.Preference, Random, Targeting.Selection, Stats, StatsLens, 
    Unit.Common, Unit.Variety, Unit.Type,
    Viz.Field, Viz.DefineCache, Viz.Gather, Viz.Common
  build-depends:       
      base >= 4.7 && < 5
    , random
    , pointless-fun
    , time-units
    , parallel
    , async
    , stm
    , lens
    , text
    , mtl
    , array
    , transformers
    , time
    , either
    , data-easy
    , data-default
    , ansi-terminal 
    , utility-ht   
    , vector
    , vty
    , brick
  default-language:    Haskell2010

executable game
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -eventlog -rtsopts -with-rtsopts=-N
  build-depends:       
      base
    , game
    
  default-language:    Haskell2010

test-suite game-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , game
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/game
